# CSGO-NAC

./: CMakeLists.txt  README.md  build.bat  inject.bat  nac_config_template.json
imgui/: imgui_internal.h
imgui/backends/: imgui_impl_sdlgpu3.cpp  imgui_impl_sdlgpu3.h
imgui/docs/: CHANGELOG.txt  FAQ.md  FONTS.md
include/: config.h  csgo_sdk.h
src/: config.cpp  dllmain.cpp  main.cpp
src/features/: fps_boost.cpp  fps_boost.h  low_details.cpp  low_details.h
src/gui/: animations.cpp  animations.h  gui.cpp  gui.h
src/types/: index.h
src/utils/: logger.cpp  logger.h
